# Rust_Watch_Project

./: Cargo.toml  README.md
.cargo/: config.toml
466x466_original_images/: alien7_466x466_rgb565_be.raw  make_spans.py
Watch_Housing_Models/: Battery.f3d  Button_Stub.f3d  PES12-40S-N0024.f3d  Rotating Bezel.f3z  Watch_Input_PCB_Layout.f3d  display stub.f3d  small side gear.f3d  switch.f3d
Watch_Input_PCB/: CAMtastic1.Cam  CAMtastic2.Cam  Watch_Input.SchDoc  Watch_Input_PCB.PrjPcb  Watch_Input_PCB.PrjPcbStructure  Watch_Input_PCB_Layout.PcbDoc  Watch_Input_PCB_Layout.step
Watch_Input_PCB/Project Outputs for Watch_Input_PCB/: Design Rule Check - Watch_Input_PCB_Layout.drc  Design Rule Check - Watch_Input_PCB_Layout.html  Status Report.Txt  Watch_Input_PCB_Layout-macro.APR_LIB  Watch_Input_PCB_Layout.1  Watch_Input_PCB_Layout.DRR  Watch_Input_PCB_Layout.EXTREP  Watch_Input_PCB_Layout.GBL  Watch_Input_PCB_Layout.GBO  Watch_Input_PCB_Layout.GBP  Watch_Input_PCB_Layout.GBS  Watch_Input_PCB_Layout.GM  Watch_Input_PCB_Layout.GM1  Watch_Input_PCB_Layout.GPB  Watch_Input_PCB_Layout.GPT  Watch_Input_PCB_Layout.GTL  Watch_Input_PCB_Layout.GTO  Watch_Input_PCB_Layout.GTP  Watch_Input_PCB_Layout.GTS  Watch_Input_PCB_Layout.LDP  Watch_Input_PCB_Layout.REP  Watch_Input_PCB_Layout.TXT  Watch_Input_PCB_Layout.apr
Watch_Input_PCB/__Previews/: Watch_Input.SchDocPreview
Watch_rs/: Cargo.toml
Watch_rs/.cargo/: config.toml
Watch_rs/src/: input.rs  lib.rs  rtc_pcf85063.rs  ui.rs
Watch_rs/src/assets/: alien1_308x374_rgb565_be.raw.zlib  alien2_308x374_rgb565_be.raw  alien2_308x374_rgb565_be.raw.zlib  alien4_308x374_rgb565_be.raw.zlib  alien5_308x374_rgb565_be.raw.zlib  debug_image2_466x466_rgb565_be.raw  debug_image3_466x466_rgb565_be.raw  debug_image_466x466_rgb565_be.raw  debug_image_466x466_rgb565_be.raw.zlib  settings_image_400x344_rgb565_be.raw.zlib  watch_background_466x466_rgb565_be.raw.zlib
raw_images/: image_converter.py
src/: co5300.rs  display.rs  garbage.txt  imu.rs  input.rs  lib.rs  qmi8658_imu.rs  rtc_pcf85063.rs  ui.rs  wiring.rs
src/assets/: alien10_240x240_rgb565_be.raw  alien10_240x240_rgb565_be.raw.zlib  alien10_308x374_rgb565_be.raw  alien10_308x374_rgb565_be.raw.zlib  alien10_466x466_rgb565_be.raw  alien10_466x466_rgb565_be.raw.zlib  alien1_240x240_rgb565_be.raw  alien1_240x240_rgb565_be.raw.zlib  alien1_308x374_rgb565_be.raw  alien1_466x466_rgb565_be.raw  alien1_466x466_rgb565_be.raw.zlib  alien2_240x240_rgb565_be.raw  alien2_240x240_rgb565_be.raw.zlib  alien2_466x466_rgb565_be.raw  alien2_466x466_rgb565_be.raw.zlib  alien3_240x240_rgb565_be.raw  alien3_240x240_rgb565_be.raw.zlib  alien3_308x374_rgb565_be.raw  alien3_308x374_rgb565_be.raw.zlib  alien3_466x466_rgb565_be.raw  alien3_466x466_rgb565_be.raw.zlib  alien4_240x240_rgb565_be.raw  alien4_240x240_rgb565_be.raw.zlib  alien4_308x374_rgb565_be.raw  alien4_466x466_rgb565_be.raw  alien4_466x466_rgb565_be.raw.zlib  alien5_240x240_rgb565_be.raw  alien5_240x240_rgb565_be.raw.zlib  alien5_308x374_rgb565_be.raw  alien5_466x466_rgb565_be.raw  alien5_466x466_rgb565_be.raw.zlib  alien6_240x240_rgb565_be.raw  alien6_240x240_rgb565_be.raw.zlib  alien6_308x374_rgb565_be.raw  alien6_308x374_rgb565_be.raw.zlib  alien6_466x466_rgb565_be.raw  alien6_466x466_rgb565_be.raw.zlib  alien7_240x240_rgb565_be.raw  alien7_240x240_rgb565_be.raw.zlib  alien7_308x374_rgb565_be.raw  (+29 more)
