[package]
edition      = "2021"
name         = "esp32s3_tests"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "esp32s3_tests"
path = "./src/bin/main.rs"

[dependencies]
# HAL + runtime
esp-hal = { version = "1.0.0-rc.0", features = ["esp32s3", "unstable"] }
esp-println = "0.15.0"
esp-backtrace = { version = "0.17.0", features = ["panic-handler", "println"] }
esp-bootloader-esp-idf = "0.2.0"
critical-section = "1.1"
cfg-if = "1.0"

# Display stack (all on embedded-hal 1.0)
gc9a01-rs = "0.4.2"
display-interface = "0.5"
display-interface-spi = "0.5"
embedded-hal-bus = "0.2"            # SpiDevice wrapper
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"

[features]
# Default to ESP32-S3
default = ["esp32s3"]

esp32     = ["esp-hal/esp32",     "esp-println/esp32",     "esp-backtrace/esp32",     "esp-bootloader-esp-idf/esp32"]
esp32c2   = ["esp-hal/esp32c2",   "esp-println/esp32c2",   "esp-backtrace/esp32c2",   "esp-bootloader-esp-idf/esp32c2"]
esp32c3   = ["esp-hal/esp32c3",   "esp-println/esp32c3",   "esp-backtrace/esp32c3",   "esp-bootloader-esp-idf/esp32c3"]
esp32c6   = ["esp-hal/esp32c6",   "esp-println/esp32c6",   "esp-backtrace/esp32c6",   "esp-bootloader-esp-idf/esp32c6"]
esp32h2   = ["esp-hal/esp32h2",   "esp-println/esp32h2",   "esp-backtrace/esp32h2",   "esp-bootloader-esp-idf/esp32h2"]
esp32s2   = ["esp-hal/esp32s2",   "esp-println/esp32s2",   "esp-backtrace/esp32",     "esp-bootloader-esp-idf/esp32s2"]
esp32s3   = ["esp-hal/esp32s3",   "esp-println/esp32s3",   "esp-backtrace/esp32s3",   "esp-bootloader-esp-idf/esp32s3"]
devkit = []
alt = []

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false


